
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Removed Spotlight effect on dialogs; was unnecessary.
- Fixed bug in Namespace creation window that was preventing namespace from creating
- Added refreshes to comboboxes in Lexicon Management to refresh combos on Namespace/Topic creation to keep panels up-to-date
- Fixed Safari issue with Element tree displaying funky on certain pages
- Fixed issue in Safari where combobox trigger was on left side
- Only set lexicon entries for context/user settings if they dont exist as system settings
- Fixed issue with Actions panel causing accordion DOM to bug
- Fixed issue with Quick Update not persisting class_key
- Fixed some issues with persistent settings for Quick Update Resource
- Fixed issue with Quick Update Resource content field being too long
- Fixed invalid lexicon entry reference for quick create resource
- Added Quick Create/Update Resource
- Preview context menu option now is "smart" and builds FURLs and separate context references
- Fixed invalid topic reference issue with modLexiconEntry::clearCache()
- Fixed headers for connector responses
- Added Quick Create/Update for all Element types
- Fixed bugs with category setting in Element processors
- Added Clear Cache checkbox option to all Element type forms
- Fixed bug with Category dropdown
- Fixed tv input properties forms from double-rendering 
- [#MODX-804] TV fields now fire resource change event
- Fixed bug in Safari with TV fields being uneditable if panel is dragged 
- [#MODX-745] Added 'cancel' button to go back to policy page when updating a policy 
- [#MODX-573] Removed no-longer-applicable 'role' column from users grid, fixed capitalization issues in processors