@@ -12,6 +12,7 @@ MODx.panel.Resource = function(config) {
         ,baseParams: {}
         ,id: 'modx-panel-resource'
         ,class_key: 'modResource'
+        ,ddGroup: 'modx-treedrop-dd'
         ,resource: ''
         ,bodyStyle: ''
         ,defaults: { collapsible: false ,autoHeight: true }
@@ -232,6 +233,8 @@ MODx.panel.Resource = function(config) {
     Ext.get('ta').on('keydown',this.fieldChangeEvent,this);
     /* to deal with combobox bug */
     setTimeout("Ext.getCmp('modx-panel-resource').onLoad();",1000);
+    
+    
 };
 Ext.extend(MODx.panel.Resource,MODx.FormPanel,{
     rteLoaded: false
@@ -240,6 +243,13 @@ Ext.extend(MODx.panel.Resource,MODx.FormPanel,{
         Ext.getCmp('modx-resource-settings-fp').getForm().setValues(this.config.record);
     }
     ,setup: function() {
+        var el = Ext.getCmp('ta');
+        this.treedrop = new MODx.load({
+            xtype: 'modx-treedrop'
+            ,target: el
+            ,targetEl: el.getEl().dom
+        });
+        
         if (this.config.resource === '' || this.config.resource === 0) {
             this.fireEvent('ready');
             return false;
