@@ -31,6 +31,7 @@
 <script src="{$_config.manager_url}assets/modext/widgets/core/modx.grid.local.js" type="text/javascript"></script>
 <script src="{$_config.manager_url}assets/modext/widgets/core/modx.console.js" type="text/javascript"></script>
 <script src="{$_config.manager_url}assets/modext/widgets/core/modx.portal.js" type="text/javascript"></script>
+<script src="{$_config.manager_url}assets/modext/widgets/modx.treedrop.js" type="text/javascript"></script>
 <script src="{$_config.manager_url}assets/modext/widgets/windows.js" type="text/javascript"></script>
 
 <script src="{$_config.manager_url}assets/modext/widgets/resource/modx.tree.resource.js" type="text/javascript"></script>
