@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Resources/Elements can now be dragged from tree straight to Resource Content pane.
 - Removed Spotlight effect on dialogs; was unnecessary.
 - Fixed bug in Namespace creation window that was preventing namespace from creating
 - Added refreshes to comboboxes in Lexicon Management to refresh combos on Namespace/Topic creation to keep panels up-to-date
